# CROUStillantAPI

./: .env.example  .gitignore  Dockerfile  IMAGE_CUSTOMIZATION.md  QUICK_START_CUSTOMIZATION.md  README.md  SECURITY.md  __main__.py  changelog.json  discord-notification-end.json  discord-notification-start.json  docker-compose.yml  pyproject.toml  requirements.txt  scalar.html  webhook.json
.github/workflows/: deployment.yaml
CROUStillantAPI/: app.py  config.py
CROUStillantAPI/components/: analytics.py  argument.py  blueprint.py  cache.py  errors.py  generate.py  middleware.py  ratelimit.py  response.py  rules.py  statistics.py
CROUStillantAPI/entities/: entities.py  insights.py  menus.py  plats.py  regions.py  restaurants.py  stats.py  taches.py  types_restaurants.py
CROUStillantAPI/exceptions/: error.py  forbidden.py  ratelimit.py
CROUStillantAPI/models/components/: __init__.py  categorie.py  changelog.py  jours.py  menu.py  plat.py  region.py  repas.py  restaurant.py  restaurant_status.py  tache.py  type_restaurant.py
CROUStillantAPI/models/exceptions/: __init__.py  badrequest.py  notfound.py  ratelimited.py  unauthorized.py
CROUStillantAPI/models/responses/: __init__.py  (+13 more)
CROUStillantAPI/routes/: __init__.py
CROUStillantAPI/templates/: iframe_custom.html  iframe_info.html  iframe_menu.html
CROUStillantAPI/utils/: colors.py  date.py  fonts.py  format.py  iframes.py  image.py  logger.py  menu.py  opening.py  text.py  webhook.py  weights.py
static/betteriutrcc/: app.css
static/geo/: crous_regions.geojson
templates/betteriutrcc/: crous.html
(+19 files in other folders)
