[project]
name = "croustillantapi"
version = "0.1.0"
description = "CROUStillant API"
authors = ["Paul Bayfield"]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.13",
    "async-timeout>=5.0.1",
    "asyncpg>=0.30.0",
    "jinja2>=3.1.6",
    "pillow>=11.1.0",
    "prometheus-client>=0.21.1",
    "python-dotenv>=1.0.1",
    "pytz>=2025.1",
    "redis>=5.2.1",
    "sanic>=24.12.0",
    "sanic-ext",
]

[tool.uv.sources]
sanic-ext = { git = "https://github.com/PaulBayfield/sanic-ext" }
