[project]
name = "croustillantapi"
version = "1.2.1"
description = "CROUStillant API"
authors = ["Paul Bayfield"]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.14.1",
    "async-timeout>=5.0.1",
    "asyncpg>=0.30.0",
    "discord-py>=2.5.2",
    "jinja2>=3.1.6",
    "pillow>=12.3.0",
    "python-dotenv>=1.0.1",
    "pytz>=2026.2",
    "redis>=8.0.1",
    "sanic>=25.12.1",
    "sanic-ext",
]

[tool.uv.sources]
sanic-ext = { git = "https://github.com/PaulBayfield/sanic-ext" }
